# optimism-elc

./: .gitignore  Cargo.toml  DESIGN.md  Makefile  README.md
.github/workflows/: ci.yaml
derivation/: Cargo.toml
derivation/src/: channel.rs  derivation.rs  driver.rs  errors.rs  lib.rs  logger.rs  oracle.rs  precompiles.rs  types.rs
derivation/src/client/: mod.rs
derivation/src/client/precompiles/: bn128_pair.rs  ecrecover.rs  kzg_point_eval.rs
derivation/src/fault/: errors.rs  mod.rs
derivation/src/fault/handler/: bn128_pair.rs  ecrecover.rs  kzg_point_eval.rs  mod.rs
derivation/src/fpvm_evm/: factory.rs
derivation/src/fpvm_evm/precompiles/: bls12_g1_add.rs  bls12_g1_msm.rs  bls12_g2_add.rs  bls12_g2_msm.rs  bls12_map_fp.rs  bls12_map_fp2.rs  bls12_pair.rs  bn128_pair.rs  ecrecover.rs  kzg_point_eval.rs  mod.rs  provider.rs  test_utils.rs  utils.rs
derivation/src/host/eth/: mod.rs  precompiles.rs
elc/derivation/: Cargo.toml
elc/derivation/src/: derivation.rs  types.rs
elc/derivation/src/client/precompiles/: bn128_pair.rs
elc/derivation/src/host/eth/: precompiles.rs
elc/light-client/: Cargo.toml
elc/light-client/src/: client.rs  client_state.rs  errors.rs  header.rs  l1.rs  lib.rs  misc.rs  oracle.rs
elc/proto/: .gitignore
light-client/: Cargo.toml
light-client/src/: account.rs  client.rs  client_state.rs  commitment.rs  consensus_state.rs  errors.rs  header.rs  l1.rs  lib.rs  logger.rs  message.rs  misbehaviour.rs  misc.rs  oracle.rs  test_utils.rs  testtool.rs  types.rs
light-client/src/l1/: converter.rs  mod.rs
light-client/tests/: e2e.rs
preimage-maker/: Cargo.toml
preimage-maker/tests/: e2e.rs  preimage_test.rs
proto/: .gitignore  Cargo.toml
proto-compiler/: Cargo.toml  README.md
proto-compiler/src/: main.rs
proto-compiler/src/cmd/: compile.rs
proto/definitions/ibc/lightclients/ethereum/v1/: ethereum.proto
proto/definitions/ibc/lightclients/optimism/v1/: optimism.proto
proto/src/: lib.rs
proto/src/prost/: ibc.lightclients.ethereum.v1.rs  ibc.lightclients.optimism.v1.rs
testdata/: submit_misbehaviour.json  submit_misbehaviour_future.json  update_client_header.json
