[workspace]
resolver = "2"
members = [
  "light-client",
  "proto",
  "derivation",
]
exclude = [
  "proto-compiler"
]

[workspace.dependencies]
thiserror = { version="2.0", default-features = false }
hashbrown = "0.15.1"
serde = { version = "1.0.210", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.128", default-features = false }
rlp = { version = "0.5.2", default-features = false }
prost = { version = "0.11", default-features = false }

# Ethereum-IBC
ethereum-consensus = { git = "https://github.com/datachainlab/ethereum-light-client-rs", rev = "v0.2.0", default-features = false }
ethereum-light-client-verifier = { git = "https://github.com/datachainlab/ethereum-light-client-rs", rev = "v0.2.0", default-features = false }

# Kona
kona-mpt = { git="https://github.com/op-rs/kona", rev= "kona-node/v1.1.3", default-features = false }
kona-client = { git="https://github.com/op-rs/kona", rev= "kona-node/v1.1.3", default-features = false }
kona-host = { git="https://github.com/op-rs/kona", rev= "kona-node/v1.1.3", default-features = false }
kona-proof = { git="https://github.com/op-rs/kona", rev= "kona-node/v1.1.3", default-features = false }
kona-preimage = {git="https://github.com/op-rs/kona", rev= "kona-node/v1.1.3", default-features = false }
kona-executor = { git="https://github.com/op-rs/kona", rev= "kona-node/v1.1.3", default-features = false }
kona-driver = { git="https://github.com/op-rs/kona", rev= "kona-node/v1.1.3", default-features = false }
kona-providers-alloy= { git="https://github.com/op-rs/kona", rev= "kona-node/v1.1.3", default-features = false }
kona-genesis = { git="https://github.com/op-rs/kona", rev= "kona-node/v1.1.3", default-features = false }
kona-protocol = { git="https://github.com/op-rs/kona", rev= "kona-node/v1.1.3", default-features = false }
kona-derive = { git="https://github.com/op-rs/kona", rev= "kona-node/v1.1.3", default-features = false }
kona-registry = { git="https://github.com/op-rs/kona", rev= "kona-node/v1.1.3", default-features = false }

# Alloy
alloy-consensus = { version = "1.0.38", default-features = false }
alloy-primitives = { version = "1.3.1", default-features = false }
alloy-eips = { version = "1.0.38", default-features = false }
alloy-trie = { version = "0.9.1", default-features = false }

# OP Alloy
op-alloy-rpc-types-engine = { version = "0.20.0", default-features = false }
op-alloy-consensus= { version = "0.20.0", default-features = false }

# Ethereum
revm = { version = "29.0.1", default-features = false }
op-revm = { version = "10.1.0", default-features = false }
alloy-evm = { version = "0.21.0", default-features = false, features = ["op"] }
alloy-op-evm = { version = "0.21.0", default-features = false }

# Cryptography
sha2 = { version = "0.10.8", default-features = false }
c-kzg = { version = "2.1.1", default-features = false }
ark-ff = { version = "0.5.0", default-features = false }
secp256k1 = { version = "0.31.0", default-features = false }
ark-bls12-381 = { version = "0.5.0", default-features = false }

[patch."crates-io"]
# Avoid confliction between lcp and kona
time = { git = "https://github.com/yoshidan/time", rev= "v0.3.19-p2", package = "time" }

