[workspace]
resolver = "2"
members = [
  "light-client",
  "proto",
  "derivation",
]
exclude = [
  "proto-compiler"
]

[workspace.dependencies]
thiserror = { version="2.0", default-features = false }
hashbrown = "0.16.0"
serde = { version = "1.0.210", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.128", default-features = false }
rlp = { version = "0.5.2", default-features = false }
prost = { version = "0.11", default-features = false }

# Ethereum-IBC
ethereum-consensus = { git = "https://github.com/datachainlab/ethereum-light-client-rs", rev = "v0.2.0", default-features = false }
ethereum-light-client-verifier = { git = "https://github.com/datachainlab/ethereum-light-client-rs", rev = "v0.2.0", default-features = false }

# Kona
#kona-client = { git="https://github.com/yoshidan/kona", rev= "12b5513028206c918686d8eca4a4a64f5104f8e9", default-features = false }
#kona-proof = { git="https://github.com/yoshidan/kona", rev= "12b5513028206c918686d8eca4a4a64f5104f8e9", default-features = false }
#kona-preimage = {git="https://github.com/yoshidan/kona", rev= "12b5513028206c918686d8eca4a4a64f5104f8e9", default-features = false }
#kona-executor = { git="https://github.com/yoshidan/kona", rev= "12b5513028206c918686d8eca4a4a64f5104f8e9", default-features = false }
#kona-driver = { git="https://github.com/yoshidan/kona", rev= "12b5513028206c918686d8eca4a4a64f5104f8e9", default-features = false }
#kona-genesis = { git="https://github.com/yoshidan/kona", rev= "12b5513028206c918686d8eca4a4a64f5104f8e9", default-features = false }
#kona-protocol = { git="https://github.com/yoshidan/kona", rev= "12b5513028206c918686d8eca4a4a64f5104f8e9", default-features = false }
#kona-derive = { git="https://github.com/yoshidan/kona", rev= "12b5513028206c918686d8eca4a4a64f5104f8e9", default-features = false }
#kona-registry = { git="https://github.com/yoshidan/kona", rev= "12b5513028206c918686d8eca4a4a64f5104f8e9", default-features = false }

kona-client = { path="../../yoshidan/kona/bin/client", default-features = false }
kona-proof= { path="../../yoshidan/kona/crates/proof/proof", default-features = false }
kona-preimage= { path="../../yoshidan/kona/crates/proof/preimage", default-features = false }
kona-executor= { path="../../yoshidan/kona/crates/proof/executor", default-features = false }
kona-driver= { path="../../yoshidan/kona/crates/proof/driver", default-features = false }
kona-genesis= { path="../../yoshidan/kona/crates/protocol/genesis", default-features = false }
kona-protocol= { path="../../yoshidan/kona/crates/protocol/protocol", default-features = false }
kona-derive= { path="../../yoshidan/kona/crates/protocol/derive", default-features = false }
kona-registry= { path="../../yoshidan/kona/crates/protocol/registry", default-features = false }



# Alloy
alloy-consensus = { version = "1.1.3", default-features = false }
alloy-primitives = { version = "1.4.1", default-features = false }
alloy-eips = { version = "1.1.3", default-features = false }

# Cryptography
sha2 = { version = "0.10.8", default-features = false }
ark-ff = { version = "0.5.0", default-features = false }

[patch."crates-io"]
# Avoid confliction between lcp and kona
time = { git = "https://github.com/yoshidan/time", rev= "v0.3.19-p2", package = "time" }

