[workspace]
resolver = "2"
members = [
  "light-client",
  "proto",
  "derivation",
]
exclude = [
  "proto-compiler"
]

[workspace.dependencies]
thiserror = { version="2.0", default-features = false }
hashbrown = "0.16.0"
serde = { version = "1.0.210", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.128", default-features = false }
rlp = { version = "0.5.2", default-features = false }
prost = { version = "0.11", default-features = false }

# Ethereum-IBC
ethereum-consensus = { git = "https://github.com/yoshidan/ethereum-light-client-rs", rev = "09c47ab55096a1a70f7800515ebdbba7115034ce", default-features = false }
ethereum-light-client-verifier = { git = "https://github.com/yoshidan/ethereum-light-client-rs", rev = "09c47ab55096a1a70f7800515ebdbba7115034ce", default-features = false }
ethereum-light-client-types = { git = "https://github.com/datachainlab/ethereum-light-client-types", rev = "v0.1.9-rc3", default-features = false }

# Kona
kona-client = { git="https://github.com/ethereum-optimism/optimism", rev= "kona-client/v1.5.1", default-features = false }
kona-proof = { git="https://github.com/ethereum-optimism/optimism", rev= "kona-client/v1.5.1", default-features = false }
kona-preimage = {git="https://github.com/ethereum-optimism/optimism", rev= "kona-client/v1.5.1", default-features = false }
kona-executor = { git="https://github.com/ethereum-optimism/optimism", rev= "kona-client/v1.5.1", default-features = false }
kona-driver = { git="https://github.com/ethereum-optimism/optimism", rev= "kona-client/v1.5.1", default-features = false }
kona-genesis = { git="https://github.com/ethereum-optimism/optimism", rev= "kona-client/v1.5.1", default-features = false }
kona-protocol = { git="https://github.com/ethereum-optimism/optimism", rev= "kona-client/v1.5.1", default-features = false }
kona-derive = { git="https://github.com/ethereum-optimism/optimism", rev= "kona-client/v1.5.1", default-features = false }
kona-registry = { git="https://github.com/ethereum-optimism/optimism", rev= "kona-client/v1.5.1", default-features = false }

# Alloy
alloy-consensus = { version = "2.0.4", default-features = false }
alloy-primitives = { version = "1.5.6", default-features = false }
alloy-eips = { version = "2.0.4", default-features = false }
alloy-op-evm = { git = "https://github.com/ethereum-optimism/optimism", rev = "kona-client/v1.5.1", default-features = false }

# Cryptography
sha2 = { version = "0.10.8", default-features = false }
ark-ff = { version = "0.5.0", default-features = false }


[patch."crates-io"]
# Avoid confliction between lcp and kona
time = { git = "https://github.com/yoshidan/time", rev= "v0.3.19-p2", package = "time" }

[patch."https://github.com/datachainlab/ethereum-light-client-types"]
ethereum-light-client-types = { path = "../ethereum-light-client-types/type" }
ethereum-light-client-proto = { path = "../ethereum-light-client-types/proto" }
