[package]
name = "optimism-derivation"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
anyhow    = { workspace = true }
prost     = { workspace = true }

# kona
kona-preimage = { workspace = true}
kona-executor = { workspace = true}
kona-driver = { workspace = true }
kona-proof = { workspace = true }
kona-genesis = { workspace = true, features = ["serde"] }

# Alloy
alloy-primitives = { workspace = true }
alloy-consensus = { workspace = true}
alloy-eips = { workspace = true }

# Revm
revm = { workspace = true }
op-revm = { workspace = true }
alloy-evm = { workspace = true }
alloy-op-evm = { workspace = true }

# misc
hashbrown = { workspace = true }
sha2 = { workspace = true}
async-trait = "0.1"
kzg-rs = { version = "0.2.3", default-features = false }
serde = { workspace = true, features = ["derive"] }
prost-derive = "0.11.9"
