[package]
name = "optimism-derivation"
version = "0.1.1"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
prost     = { workspace = true }
serde_json = { workspace = true }

# kona
kona-preimage = { workspace = true }
kona-executor = { workspace = true }
kona-driver = { workspace = true }
kona-derive = { workspace = true }
kona-proof = { workspace = true }
kona-genesis = { workspace = true, features = ["serde"] }
kona-client = { workspace = true }
kona-registry = { workspace = true }

# Alloy
alloy-primitives = { workspace = true }
alloy-consensus = { workspace = true}
alloy-eips = { workspace = true }

# Cryptography
ark-ff = { workspace = true }
sha2 = { workspace = true}

#
revm-interpreter = "31.1.0"
revm-inspector = "14.1.0"

# misc
hashbrown = { workspace = true }
async-trait = "0.1"
kzg-rs = { version = "0.2.3", default-features = false }
serde = { workspace = true, features = ["derive"] }
prost-derive = "0.11.9"
log = "0.4.29"

