[package]
name = "optimism-elc"
version = "0.1.1"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rlp = { workspace = true }
prost = { workspace = true }

# derivation
optimism-derivation = { version = "0.1.1", path = "../derivation", default-features = false }
optimism-ibc-proto = { version = "0.1.0", path = "../proto", default-features = false }

# LCP
light-client = { git = "https://github.com/datachainlab/lcp", rev = "v0.2.17", default-features = false, features = ["ibc"] }

# Ethereum-IBC
ethereum-consensus = { git = "https://github.com/yoshidan/ethereum-light-client-rs", rev = "cb4f62bb86a143556068c0be89bf62ac5f54c75a", default-features = false }
ethereum-light-client-verifier = { git = "https://github.com/yoshidan/ethereum-light-client-rs", rev = "cb4f62bb86a143556068c0be89bf62ac5f54c75a", default-features = false }
ethereum-light-client-types = { git = "https://github.com/datachainlab/ethereum-light-client-types", rev = "933be5eb28f9608d287b2f78cf3728883c5f7e56", default-features = false }

# Kona
kona-protocol = { workspace = true}

# Alloy
alloy-consensus = { workspace = true}
alloy-primitives = { workspace = true }

[dev-dependencies]
time = { version = "0.3", default-features = false, features = ["macros", "parsing"] }
light-client = { git = "https://github.com/datachainlab/lcp", rev = "v0.2.17", default-features = false, features = ["ibc", "std"] }
store = { git = "https://github.com/datachainlab/lcp", rev = "v0.2.17", default-features = false }
