[package]
name = "optimism-preimage-maker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true}
hashbrown = {workspace = true}
serde = { workspace = true }
serde_json = { workspace = true}

reqwest = "0.12"
clap = { version = "4.5.18", features = ["derive", "env"] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
axum = "0.7.9"
lru = "0.12.5"
log = "0.4.22"
tokio = { version="1.41", features=["full"] }
async-trait = "0.1"

# Kona
kona-mpt = { workspace = true }
kona-client = { workspace = true }
kona-host = { workspace = true }
kona-proof = { workspace = true, features = ["std"] }
kona-preimage = { workspace = true, features = ["std"] }
kona-executor = { workspace = true }
kona-driver = { workspace = true }
kona-std-fpvm = { workspace = true }
kona-providers-alloy= { workspace = true }

# Maili
maili-consensus = { workspace = true }
maili-protocol = { workspace = true, features = ["std", "serde"] }
maili-registry = { workspace = true }
maili-genesis = { workspace = true, features = ["std", "serde"] }

# Alloy
alloy-rlp = { workspace = true }
alloy-trie = { workspace = true}
alloy-eips = { workspace = true, features = ["kzg"] }
alloy-serde = { workspace = true }
alloy-provider = { workspace = true, features = ["reqwest"] }
alloy-consensus = { workspace = true }
alloy-transport = { workspace = true }
alloy-rpc-types = { workspace = true, features = ["eth", "debug"] }
alloy-rpc-client = { workspace = true}
alloy-primitives = { workspace = true, features = ["map", "serde"] }
alloy-node-bindings = { workspace = true }
alloy-transport-http = { workspace = true }
alloy-rpc-types-engine = { workspace = true }
alloy-rpc-types-beacon = { workspace = true }
alloy-sol-types = { workspace = true }

# OP Alloy
op-alloy-consensus = { workspace = true }
op-alloy-rpc-types-engine = { workspace = true, features = ["serde"] }

# Revm
revm = { workspace = true, features = ["std", "c-kzg", "secp256k1", "portable", "blst"] }

optimism-derivation = { version = "0.1.0", path = "../elc/derivation", default-features = false }
