[package]
name = "optimism-ibc-proto"
version = "0.1.0"
edition = "2021"

[lib]
name = "optimism_ibc_proto"
path = "src/lib.rs"
doctest = false

[package.metadata.docs.rs]
all-features = true

[dependencies]
prost       = { workspace = true }
ibc-proto   = { version = "0.26.0", default-features = false }

[features]
default     = ["std"]
std         = []
json-schema = []