[package]
name = "optimism-ibc-proto"
version = "0.1.0"
edition = "2021"

[lib]
name = "optimism_ibc_proto"
path = "src/lib.rs"
doctest = false

[package.metadata.docs.rs]
all-features = true

[dependencies]
prost       = { workspace = true }
ibc-proto   = { version = "0.26.0", default-features = false }
ethereum-light-client-proto = { git = "https://github.com/datachainlab/ethereum-light-client-types", rev = "e87e94ac50e54943b1e66bda57c08d1271f9de82", default-features = false }

[features]
default     = ["std"]
std         = []
json-schema = []