[package]
name = "optimism-derivation"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
anyhow    = { workspace = true }
prost     = { workspace = true }

# kona
kona-preimage = { workspace = true}
kona-executor = { workspace = true}
kona-mpt.workspace = true
kona-driver.workspace = true
kona-proof.workspace = true

# Maili
maili-genesis = { workspace = true, features = ["serde"] }

# Revm + Alloy
revm = { workspace = true, features = ["optimism","c-kzg"] }
alloy-primitives = { workspace = true }
alloy-consensus = { workspace = true}

# misc
tracing = "0.1.40"
serde = { version = "1.0.214", features = ["derive"] }
prost-derive = "0.11.9"
